--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="desingOh/css/default.css"/>
+  <link rel="stylesheet" href="desingOh/default.css"/>
   <title>Ohmyfood-sass</title>
    <script
       src="https://kit.fontawesome.com/4fc20de488.js"
