Modification_Média_Queries&index.html

--- a/index.html
+++ b/index.html
@@ -37,23 +37,24 @@
       <button class="btn">Explorez nos restaurants</button>
     </section>
     <section class="section_fonctionnement">
-      <h2>Fonctionnement</h2>
+     <div class="section_fonctionnement_titre"> <h2>Fonctionnement</h2></div>
      <div class="section_btn">
         <div class="section_fonctionnement_btn">
-        <div class="section_fonctionnement_btn_etapes etape_1"><p>1</p>
-        </div>
-        <span> <i class="fas fa-mobile-alt"></i>Choisissez votre
+        <span class="section_fonctionnement_btn_etapes etape_1">1</span>
+        <span> <i class="fas fa-mobile-alt"></i></span>
+        <span class="section_fonctionnement_btn_action">Choisissez votre
         restaurant</span>
       </div>
+        <div class="section_fonctionnement_btn">
+        <span class="section_fonctionnement_btn_etapes etape_1">2</span>
+        <span> <i class="fas fa-list-ul"></i></span>
+        <span class="section_fonctionnement_btn_action">Composez votre menu</span>
+      </div>
       <div class="section_fonctionnement_btn">
-        <div class="section_fonctionnement_btn_etapes etape_2"><p>2</p></div>
-        <span><i class="fas fa-list-ul"></i>Composez votre menu</span>
+        <span class="section_fonctionnement_btn_etapes etape_1">3</span>
+        <span> <i class="fas fa-store"></i></span>
+        <span class="section_fonctionnement_btn_action">Dégustez au restaurant</span>
       </div>
-      <div class="section_fonctionnement_btn ">
-        <div class="section_fonctionnement_btn_etapes etape_3"><p>3</p></div>
-        <span><i class="fas fa-store"></i>Dégustez au restaurant</span>
-      </div>
-     </div>
     </section>
     <section class="section_restaurants">
       <h2 class="section_restaurants_titre">Restaurants</h2>
