Amélioration_Version_Resppensive

--- a/index.html
+++ b/index.html
@@ -56,90 +56,114 @@
         <span class="section_fonctionnement_btn_action">Dégustez au restaurant</span>
       </div>
     </section>
+
     <section class="section_restaurants">
       <h2 class="section_restaurants_titre">Restaurants</h2>
       <div class="section_restaurant_cartes">
+
         <article class="section_restaurants_carte carte carte_1">
           <a href="pages_html/laPaletteDuGout.html">
-            <div class="section_restaurants_carte_img cart_img img_1">
-             
-              <img
-              src="imgOh/restaurants/La-palette-du- goût.jpg"
-              alt="La palette du goût"/>
-               <p>Nouveau</p>
-            </div>
-          <div class="section_restaurants__carte_description carte_description">
-            <h4>La palette du goût</h4>
-            <p>Ménilmontant</p>
-           <!-- <div
-            class="section_restaurants__carte_description_souhait icone_coeur">
-            <p>
-              <i class="fas fa-heart fa-stack-1x"></i>
-            </p>
-          </div>-->
-        </div>
-		</a>
-      <a href="pages_html/laNoteEnchantee.html">
+
+              <div class="section_restaurants_carte_img cart_img img_1">
+                <img
+                src="imgOh/restaurants/La-palette-du- goût.jpg"
+                alt="La palette du goût"/>
+              </div>
+              <div class="nouveau"><p>Nouveau</p></div>
+              <div class="section_restaurants_carte_description carte_description">
+                    <div class=" carte_description_1">
+                      <h4>La palette du goût</h4>
+                        <p>Ménilmontant</p>
+                    </div>
+                    <div class="section_restaurants__carte_description_souhait icone_coeur">
+                      <i class="fas fa-heart fa-heart_1"></i>
+                            <!-- <i class="fas fa-heart fa-heart_2"></i>-->
+                    </div>
+              </div>
+	      	</a>
       </article>
-      <article class="section_restaurants_carte carte carte_2">
-        <div class="section_restaurants_carte_img cart_img img_2">
-        
-          <img
-          src="imgOh/restaurants/La-note-enchantée.jpg"
-          alt="La note enchantée"/>
-            <p>Nouveau</p>
-        </div>
-        <div class="section_restaurants__carte_description carte_description">
-          <h4>La note enchantée</h4>
-          <p>Charonne</p>
 
-    </article></a>
-    <a href="pages_html/aLaFrançaise.html">
-    <article class="section_restaurants_carte carte carte_3">
-      <div class="section_restaurants_carte_img cart_img img_3">
-        <img
-        src="imgOh/restaurants/a-la-française.jpg"
-        alt="À la française"/>
-      </div>
-      <div class="section_restaurants__carte_description carte_description">
-        <h4>À la française</h4>
-        <p>Cité Rouge</p>
+              <article class="section_restaurants_carte carte carte_1">
+          <a href="pages_html/laNoteEnchantee.html">
 
-    </div>
-    </a>
-    <a href="pages_html/leDeliceDesSens.html">
-     </article>
-  <article class="section_restaurants_carte carte carte_4">
+              <div class="section_restaurants_carte_img cart_img img_1">
+                <img
+                src="imgOh/restaurants/La-note-enchantée.jpg"
+                alt="La palette du goût"/>
+              </div>
+              <div class="nouveau"><p>Nouveau</p></div>
+              <div class="section_restaurants_carte_description carte_description">
+                    <div class=" carte_description_1">
+                      <h4>La note enchantée</h4>
+                        <p>Charonne</p>
+                    </div>
+                    <div class="section_restaurants__carte_description_souhait icone_coeur">
+                      <i class="fas fa-heart fa-heart_1"></i>
+                            <!-- <i class="fas fa-heart fa-heart_2"></i>-->
+                    </div>
+              </div>
+	      	</a>
+      </article>
 
-    <div class="section_restaurants_carte_img cart_img img_4">
-      <img
-      src="imgOh/restaurants/Le-délice des-sens.jpg"
-      alt="Le délice des sens"/>
-    </div>
-    <div class="section_restaurants__carte_description carte_description">
-      <h4>Le délice des sens</h4>
-      <p>Folie-Méricourt</p>
+      <article class="section_restaurants_carte carte carte_1">
+       <a href="pages_html/aLaFrançaise.html">
 
-  </div>
-</article>
-    </a>
+              <div class="section_restaurants_carte_img cart_img img_1">
+                <img
+              src="imgOh/restaurants/a-la-française.jpg"
+                alt="La palette du goût"/>
+              </div>
+              <div class="section_restaurants_carte_description carte_description">
+                    <div class=" carte_description_1">
+                      <h4>À la française</h4>
+                        <p>Cité Roug</p>
+                    </div>
+                    <div class="section_restaurants__carte_description_souhait icone_coeur">
+                      <i class="fas fa-heart fa-heart_1"></i>
+                            <!-- <i class="fas fa-heart fa-heart_2"></i>-->
+                    </div>
+              </div>
+	      	</a>
+      </article>
+
+       <article class="section_restaurants_carte carte carte_1">
+       <a href="pages_html/aLaFrançaise.html">
+
+              <div class="section_restaurants_carte_img cart_img img_1">
+                <img
+             src="imgOh/restaurants/Le-délice des-sens.jpg"
+                alt="La palette du goût"/>
+              </div>
+              <div class="section_restaurants_carte_description carte_description">
+                    <div class=" carte_description_1">
+                      <h4>Le délice des sens</h4>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="section_restaurants__carte_description_souhait icone_coeur">
+                      <i class="fas fa-heart fa-heart_1"></i>
+                            <!-- <i class="fas fa-heart fa-heart_2"></i>-->
+                    </div>
+              </div>
+	      	</a>
+      </article>
+
  
 </div>
 </section>
 </main>
 <!--footer-->
-<footer class="footer">
- <div class="footer">
-    <h5 class="footer_header">ohmyfood</h5>
-  <p class="proposerUnRestaurant">
-    <i class="fas fa-utensils"></i>Proposer un restaurant
-  </p>
-  <p class="devenirPartenair footerInfos">
-    <i class="fas fa-hands-helping"></i>Devenir partenaire
-  </p>
-  <p class="mentionsLegales footerInfos">Mentions légales</p>
-  <p class="contact footerInfos">Contact</a></p> 
- </div>
+<footer>
+    <div class="footer">
+          <h5 class="footer_header">ohmyfood</h5>
+        <p class="proposerUnRestaurant footerInfos">
+          <i class="fas fa-utensils"></i>Proposer un restaurant
+        </p>
+        <p class="devenirPartenair footerInfos">
+          <i class="fas fa-hands-helping"></i>Devenir partenaire
+        </p>
+        <p class="mentionsLegales footerInfos">Mentions légales</p>
+        <p class="contact footerInfos">Contact</a></p> 
+    </div>
 </footer>
 </body>
 </html>
