--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -12,11 +12,17 @@
   crossorigin="anonymous"
   ></script>
  <style>   img{width: 400px;} body{background-color: rgb(134, 116, 126);}  </style>
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav class="header">
-        <a href="../index.html"> <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" /></a>
+    <nav class="header_paletteDuGout">
+     
+        <a href="../index.html">  <i class="fas fa-arrow-left"></i> </a>
+        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" />
     </nav>
   </header>
   <!--main-->
