--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       crossorigin="anonymous"
     ></script>
     <style> img{width:200px;} </style>
-
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
