--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -11,7 +11,7 @@
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
   ></script>
- <style>   img{width: 400px;} body{background-color: rgb(134, 116, 126);}  </style>
+<!-- <style>   img{width: 400px;} body{background-color: rgb(134, 116, 126);}  </style>-->
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,15 +37,16 @@
    <section class="restaurantEntresPlats">
       <div class="nomDuRestaurant_titre">
             <h2>La palette du goût</h2>
-            <span class="fa-stack">
-              <i class="fas fa-heart"></i>
-            </span>
+            <div class="section_restaurants_carte_description_souhait icone_coeur">
+                      <i class="far fa-heart fa-heart-1 heartGout"></i>
+                      <i class="fas fa-heart heartHover"></i>
+                    </div>
         </div>  
        
       <section class="menu">
         <article class="carteMenuEntree">
-          <div>
-            <h3>ENTRÉES</h3> <hr class="trait">
+          <div class="carteHeader">
+            <h3>ENTRÉES <hr class="trait"></h3> 
             <!-- <div class="underline-h3"></div> -->
           </div>
           <div class="carteMenuEntreeDescription menuDescription">
@@ -88,7 +89,7 @@
 
         <article class="carteMenuPlats">
           <div>
-            <h3>PLATS</h3> <hr class="trait">
+            <h3>PLATS <hr class="trait"></h3> 
             <!-- <div class="underline-h3"></div> -->
           </div>
           <div class="MenuPlats">
@@ -132,7 +133,7 @@
 
         <article class="carteMenuDesserts">
           <div>
-            <h3>DESSERTS</h3> <hr class="trait">
+            <h3>DESSERTS <hr class="trait"></h3> 
             <!-- <div class="underline-h3"></div> -->
           </div>
           <div class="MenuDesserts">
