Corrections_page_acceuil

--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -197,7 +197,7 @@
           <i class="fas fa-hands-helping"></i>Devenir partenaire
         </p>
         <p class="mentionsLegales footerInfos">Mentions légales</p>
-        <p class="contact footerInfos">Contact</a></p> 
+     <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
     </div>
 </footer>
 </body>
