--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <article class="section_restaurants_carte carte carte_1">         
           <a href="pages_html/laPaletteDuGout.html">    
               <div class="section_restaurants_carte_img cart_img img_1">
-              <div> 
+              <div class="img_btn"> 
                  <img
                 src="imgOh/restaurants/La-palette-du- goût.jpg"
                 alt="La palette du goût"/>
@@ -89,11 +89,12 @@
           <a href="pages_html/laNoteEnchantee.html">
 
               <div class="section_restaurants_carte_img cart_img img_1">
-                <img
-                src="imgOh/restaurants/La-note-enchantée.jpg"
+       <div class="img_btn"> 
+                 <img
+                src="imgOh/restaurants/La-palette-du- goût.jpg"
                 alt="La palette du goût"/>
+                    <h3 class="nouveau">Nouveau</h3>
               </div>
-              <div class="nouveau"><p>Nouveau</p></div>
               <div class="section_restaurants_carte_description carte_description">
                     <div class=" carte_description_1">
                       <h4>La note enchantée</h4>
@@ -164,7 +165,7 @@
           <i class="fas fa-hands-helping"></i>Devenir partenaire
         </p>
         <p class="mentionsLegales footerInfos">Mentions légales</p>
-        <p class="contact footerInfos">Contact</a></p> 
+     <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
     </div>
 </footer>
 </body>
