--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="header">
       <h1>
-        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" />
+        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"/>
       </h1>
     </div>
   </header>
@@ -53,10 +53,10 @@
         <span> <i class="fas fa-list-ul"></i></span>
         <span class="section_fonctionnement_btn_action">Composez votre menu</span>
       </div>
-      <div class="section_fonctionnement_btn">
+      <div class="section_fonctionnement_btn btn_action_3">
         <span class="section_fonctionnement_btn_etapes etape_1">3</span>
         <span> <i class="fas fa-store"></i></span>
-        <span class="section_fonctionnement_btn_action">Dégustez au restaurant</span>
+        <span class="section_fonctionnement_btn_action ">Dégustez au restaurant</span>
       </div>
     </section>
 
