Page_A la Française

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="header">
       <h1>
-        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" />
+        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"/>
       </h1>
     </div>
   </header>
@@ -53,10 +53,10 @@
         <span> <i class="fas fa-list-ul"></i></span>
         <span class="section_fonctionnement_btn_action">Composez votre menu</span>
       </div>
-      <div class="section_fonctionnement_btn">
+      <div class="section_fonctionnement_btn btn_action_3">
         <span class="section_fonctionnement_btn_etapes etape_1">3</span>
         <span> <i class="fas fa-store"></i></span>
-        <span class="section_fonctionnement_btn_action">Dégustez au restaurant</span>
+        <span class="section_fonctionnement_btn_action ">Dégustez au restaurant</span>
       </div>
     </section>
 
@@ -66,7 +66,7 @@
         <article class="section_restaurants_carte carte carte_1">         
           <a href="pages_html/laPaletteDuGout.html">    
               <div class="section_restaurants_carte_img cart_img img_1">
-              <div> 
+              <div class="img_btn"> 
                  <img
                 src="imgOh/restaurants/La-palette-du- goût.jpg"
                 alt="La palette du goût"/>
@@ -89,11 +89,12 @@
           <a href="pages_html/laNoteEnchantee.html">
 
               <div class="section_restaurants_carte_img cart_img img_1">
-                <img
-                src="imgOh/restaurants/La-note-enchantée.jpg"
+       <div class="img_btn"> 
+                 <img
+                src="imgOh/restaurants/La-palette-du- goût.jpg"
                 alt="La palette du goût"/>
+                    <h3 class="nouveau">Nouveau</h3>
               </div>
-              <div class="nouveau"><p>Nouveau</p></div>
               <div class="section_restaurants_carte_description carte_description">
                     <div class=" carte_description_1">
                       <h4>La note enchantée</h4>
@@ -164,7 +165,7 @@
           <i class="fas fa-hands-helping"></i>Devenir partenaire
         </p>
         <p class="mentionsLegales footerInfos">Mentions légales</p>
-        <p class="contact footerInfos">Contact</a></p> 
+     <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
     </div>
 </footer>
 </body>
