--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../desingOh/default.css"/>
-  <title>Ohmyfood_la palette du gout</title>
+  <title>Ohmyfood_A la française</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
@@ -29,13 +29,13 @@
     <section class="restaurant"> 
             <div class="Restaurant_img ">
               <img
-                  src="../imgOh/restaurants/La-palette-du- goût.jpg"
+                  src="../imgOh/restaurants/a-la-française.jpg"
                     alt="La palette du goût"
                     class="paletteDuGout_img"/>  
             </div>
      <section class="restaurantEntresPlats">
              <div class="nomDuRestaurant_titre">
-                     <h2>La palette du goût</h2>
+                     <h2>A la française</h2>
                      <div class="section_restaurants_carte_description_souhait icone_coeur">
                         <i class="far fa-heart fa-heart-1 heartGout"></i>
                         <i class="fas fa-heart heartHover"></i>
@@ -48,10 +48,10 @@
           </div>
           <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Fricassée d'escargot</h4>
+              <h4>Tartare de poulpe acidulé</h4>
                   <div class="menuEntreeInfos menuDescriptionPrix">
                     <p class="menuEntreeInfosCompliment">
-                    Au piment d'Espelette
+                   Aux zests d'orange
                     </p>
                     <p class="menuEntreeInfosPrix">25€</p>
                   </div>
@@ -59,10 +59,10 @@
           </div>
                 <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Foie gras de canard mi-cuit</h4>
+              <h4>Velouté de légumes d'antan</h4>
               <div class="menuEntreeInfos menuDescriptionPrix">
                 <p class="menuEntreeInfosCompliment">
-                Et ses copeaux de truffe noire
+                Carotte, panais, topinambour
                 </p>
                 <p class="menuEntreeInfosPrix">35€</p>
               </div>
@@ -70,10 +70,10 @@
           </div>
                 <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Oeuf au plat</h4>
+              <h4>Soupe à l'oignon</h4>
               <div class="menuEntreeInfos menuDescriptionPrix">
                 <p class="menuEntreeInfosCompliment">
-                      Assaisonné à la truffe sur lit de caviar
+              Revisitée
                 </p>
                 <p class="menuEntreeInfosPrix">20€</p>
               </div>
@@ -85,10 +85,10 @@
           </div>
           <div class="MenuPlats">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de boeuf aux herbes</h4>
+              <h4>Coquilles Saint-Jacques</h4>
               <div class="MenuPlatsInfos menuDescriptionPrix">
                 <p class="MenuPlatsInfosIngredients">
-                   Accompagné de sa ribambelle de légumes
+                   Accompagnées d'une purée de panais
                 </p>
                 <p class="MenuPlatsInfosPrix">40€</p>
               </div>
@@ -96,10 +96,10 @@
           </div>
            <div class="MenuPlats">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Parmentier de queue de boeuf</h4>
+              <h4>Magret de canard</h4>
               <div class="MenuPlatsInfos menuDescriptionPrix">
                 <p class="MenuPlatsInfosIngredients">
-                  À la truffe noire sur sa purée de panais
+                  Et parmentier de pommes de terres
                 </p>
                 <p class="MenuPlatsInfosPrix">35€</p>
               </div>
@@ -107,12 +107,12 @@
           </div>
             <div class="MenuPlats menuX">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de turbot</h4>
+              <h4>pigeonneau d'Illes-et-Villaine</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                  Aux agrumes
+          Sur son lit de gnocchis aux légumes
                 </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
+                <p class="MenuPlatsInfosPrix">44€</p>
               </div>
             </div>
           </div>
@@ -123,10 +123,10 @@
           </div>
           <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Paris-Brest</h4>
+              <h4>Pétales de violettes glacés</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                 Revisité
+              Et purée de noisettes
                 </p>
                 <p class="MenuPlatsInfosPrix">18€</p>
               </div>
@@ -134,10 +134,10 @@
           </div>
           <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Macaron au chocolat d'exception</h4>
+              <h4>Fondant au chocolat</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                   Et glace à la vanille de Madagascar
+                 Revisté
                 </p>
                 <p class="MenuPlatsInfosPrix">22€</p>
               </div>
@@ -145,10 +145,10 @@
           </div>
     <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Mousse au chocolat</h4>
+              <h4>Millefeuille croustillant</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-          Au piment d'Espelette et à la truffe noire
+      myrtilles et pate d'amende
                 </p>
                 <p class="MenuPlatsInfosPrix">23€</p>
               </div>
