--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../desingOh/default.css"/>
-  <title>Ohmyfood_la palette du gout</title>
+  <title>Ohmyfood_La Note Enchantée</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
@@ -29,13 +29,13 @@
     <section class="restaurant"> 
             <div class="Restaurant_img ">
               <img
-                  src="../imgOh/restaurants/La-palette-du- goût.jpg"
+                  src="../imgOh/restaurants/La-note-enchantée.jpg"
                     alt="La palette du goût"
                     class="paletteDuGout_img"/>  
             </div>
      <section class="restaurantEntresPlats">
              <div class="nomDuRestaurant_titre">
-                     <h2>La palette du goût</h2>
+                     <h2>La note enchantée</h2>
                      <div class="section_restaurants_carte_description_souhait icone_coeur">
                         <i class="far fa-heart fa-heart-1 heartGout"></i>
                         <i class="fas fa-heart heartHover"></i>
@@ -48,10 +48,10 @@
           </div>
           <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Fricassée d'escargot</h4>
+              <h4>Ravioles de foie gras</h4>
                   <div class="menuEntreeInfos menuDescriptionPrix">
                     <p class="menuEntreeInfosCompliment">
-                    Au piment d'Espelette
+                   Accompagnés de leur crème à la truffe
                     </p>
                     <p class="menuEntreeInfosPrix">25€</p>
                   </div>
@@ -59,23 +59,34 @@
           </div>
                 <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Foie gras de canard mi-cuit</h4>
+              <h4>Caviar osciètre</h4>
               <div class="menuEntreeInfos menuDescriptionPrix">
                 <p class="menuEntreeInfosCompliment">
-                Et ses copeaux de truffe noire
+               Sur blini à la farine de blé noir
                 </p>
                 <p class="menuEntreeInfosPrix">35€</p>
               </div>
             </div>
           </div>
+            <div class="carteMenuEntreeDescription menuDescription">
+            <div class="menuEntree">
+              <h4>Homard et espuma de...</h4>
+                  <div class="menuEntreeInfos menuDescriptionPrix">
+                    <p class="menuEntreeInfosCompliment">
+                  Mariné aux zests d'orange
+                    </p>
+                    <p class="menuEntreeInfosPrix">20€</p>
+                  </div>
+            </div>
+          </div>
                 <div class="carteMenuEntreeDescription menuDescription">
             <div class="menuEntree">
-              <h4>Oeuf au plat</h4>
+              <h4>Foie gras de canard cuit entier</h4>
               <div class="menuEntreeInfos menuDescriptionPrix">
                 <p class="menuEntreeInfosCompliment">
-                      Assaisonné à la truffe sur lit de caviar
+                        Confiture de figue et pain toasté
                 </p>
-                <p class="menuEntreeInfosPrix">20€</p>
+                <p class="menuEntreeInfosPrix">35€</p>
               </div>
             </div>
         </article>
@@ -85,10 +96,10 @@
           </div>
           <div class="MenuPlats">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de boeuf aux herbes</h4>
+              <h4>Noix de coquilles Saint-Jacques</h4>
               <div class="MenuPlatsInfos menuDescriptionPrix">
                 <p class="MenuPlatsInfosIngredients">
-                   Accompagné de sa ribambelle de légumes
+                  Sur lit de purée de céleri-rave
                 </p>
                 <p class="MenuPlatsInfosPrix">40€</p>
               </div>
@@ -96,10 +107,10 @@
           </div>
            <div class="MenuPlats">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Parmentier de queue de boeuf</h4>
+              <h4>Langoustine poêlée</h4>
               <div class="MenuPlatsInfos menuDescriptionPrix">
                 <p class="MenuPlatsInfosIngredients">
-                  À la truffe noire sur sa purée de panais
+                Purée de patate douce
                 </p>
                 <p class="MenuPlatsInfosPrix">35€</p>
               </div>
@@ -107,12 +118,12 @@
           </div>
             <div class="MenuPlats menuX">
             <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de turbot</h4>
+              <h4>Mijoté de queue de boeufe</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                  Aux agrumes
+           Et riz sauvage aux zestes de citron
                 </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
+                <p class="MenuPlatsInfosPrix">44€</p>
               </div>
             </div>
           </div>
@@ -123,10 +134,10 @@
           </div>
           <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Paris-Brest</h4>
+              <h4>Macaron noisette et chocolat</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                 Revisité
+             Glace au caramel brun et sel de Guérande
                 </p>
                 <p class="MenuPlatsInfosPrix">18€</p>
               </div>
@@ -134,10 +145,10 @@
           </div>
           <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Macaron au chocolat d'exception</h4>
+              <h4>Baba au rhum revisité</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-                   Et glace à la vanille de Madagascar
+               Avec son coulis de citron
                 </p>
                 <p class="MenuPlatsInfosPrix">22€</p>
               </div>
@@ -145,10 +156,10 @@
           </div>
     <div class="MenuDesserts">
             <div class="MenuDessertsInfos menuDescription">
-              <h4>Mousse au chocolat</h4>
+              <h4>Tarte au citron meringuée</h4>
               <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
                 <p>
-          Au piment d'Espelette et à la truffe noire
+            Déstructurée
                 </p>
                 <p class="MenuPlatsInfosPrix">23€</p>
               </div>
