Page_Le délice des sens

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
       </article>
 
        <article class="section_restaurants_carte carte carte_4">
-       <a href="pages_html/aLaFrançaise.html">
-
+       <a href="pages_html/leDeliceDesSens.html">
               <div class="section_restaurants_carte_img cart_img img_1">
                 <img
              src="imgOh/restaurants/Le-délice des-sens.jpg"
@@ -149,8 +148,6 @@
               </div>
 	      	</a>
       </article>
-
- 
 </div>
 </section>
 </main>
