Modification_Renomer_Fichier

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="desingOh/default.css"/>
+  <link rel="stylesheet" href="desing/default.css"/>
   <title>Ohmyfood-sass</title>
    <script
       src="https://kit.fontawesome.com/4fc20de488.js"
       crossorigin="anonymous"
     ></script>
-    <style> img{width:200px;} </style>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,7 +20,8 @@
   <header>
     <div class="header">
       <h1>
-        <img src="/imgOh/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"/>
+        <img src="/img/logo/ohmyfood.png" alt="logo_Ohmyfood" class="logo"/> <br>
+        <img src="/img/logo/ohmyfood2.PNG" alt="logo_Ohmyfood" class="logo"/>
       </h1>
     </div>
   </header>
@@ -68,7 +68,7 @@
               <div class="section_restaurants_carte_img cart_img img_1">
               <div class="img_btn"> 
                  <img
-                src="imgOh/restaurants/La-palette-du- goût.jpg"
+                src="img/restaurants/La-palette-du-goût.jpg"
                 alt="La palette du goût"/>
                     <h3 class="nouveau">Nouveau</h3>
               </div>
@@ -91,7 +91,7 @@
               <div class="section_restaurants_carte_img cart_img img_1">
        <div class="img_btn"> 
                  <img
-                src="imgOh/restaurants/La-palette-du- goût.jpg"
+                src="img/restaurants/La-note-enchantée.jpg"
                 alt="La palette du goût"/>
                     <h3 class="nouveau">Nouveau</h3>
               </div>
@@ -113,7 +113,7 @@
 
               <div class="section_restaurants_carte_img cart_img img_1">
                 <img
-              src="imgOh/restaurants/a-la-française.jpg"
+              src="img/restaurants/a-la-française.jpg"
                 alt="La palette du goût"/>
               </div>
               <div class="section_restaurants_carte_description carte_description">
@@ -133,7 +133,7 @@
        <a href="pages_html/leDeliceDesSens.html">
               <div class="section_restaurants_carte_img cart_img img_1">
                 <img
-             src="imgOh/restaurants/Le-délice des-sens.jpg"
+             src="img/restaurants/Le-délice-des-sens.jpg"
                 alt="La palette du goût"/>
               </div>
               <div class="section_restaurants_carte_description carte_description">
