--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../desingOh/default.css"/>
+  <link rel="stylesheet" href="../desing/default.css"/>
   <title>Ohmyfood_La Note Enchantée</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
@@ -21,7 +21,7 @@
   <header>
         <nav class="header_paletteDuGout">
             <a href="../index.html">  <i class="fas fa-arrow-left"></i> </a>
-            <img src="/imgOh/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
+            <img src="/img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
         </nav>
   </header>
 
@@ -29,7 +29,7 @@
     <section class="restaurant"> 
             <div class="Restaurant_img ">
               <img
-                  src="../imgOh/restaurants/La-note-enchantée.jpg"
+                  src="../img/restaurants/La-note-enchantée.jpg"
                     alt="La palette du goût"
                     class="paletteDuGout_img"/>  
             </div>
