--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="header">
       <h1>
-        <img src="/img/logo/ohmyfood.png" alt="logo_Ohmyfood" class="logo"/> <br>
+        <img src="../img/logo/ohmyfood.png" alt="logo_Ohmyfood" class="logo"/> <br>
         <img src="/img/logo/ohmyfood2.PNG" alt="logo_Ohmyfood" class="logo"/>
       </h1>
     </div>
@@ -64,7 +64,7 @@
       <h2 class="section_restaurants_titre">Restaurants</h2>
       <div class="section_restaurant_cartes">
         <article class="section_restaurants_carte carte carte_1">         
-          <a href="pages_html/laPaletteDuGout.html">    
+          <a href="pages_html/laPaletteDuGout.html" title="La palette du goût" target="_blank">    
               <div class="section_restaurants_carte_img cart_img img_1">
               <div class="img_btn"> 
                  <img
@@ -86,7 +86,7 @@
       </article>
 
               <article class="section_restaurants_carte carte carte_2">
-          <a href="pages_html/laNoteEnchantee.html">
+          <a href="pages_html/laNoteEnchantee.html" title="La note enchantée" target="_blank">
 
               <div class="section_restaurants_carte_img cart_img img_1">
        <div class="img_btn"> 
@@ -109,11 +109,11 @@
       </article>
 
       <article class="section_restaurants_carte carte carte_3">
-       <a href="pages_html/aLaFrançaise.html">
+       <a href="pages_html/aLaFrançaise.html" title="À la française" target="_blank">
 
               <div class="section_restaurants_carte_img cart_img img_1">
                 <img
-              src="img/restaurants/a-la-française.jpg"
+              src="img/restaurants/A-la-française.jpg"
                 alt="La palette du goût"/>
               </div>
               <div class="section_restaurants_carte_description carte_description">
@@ -130,7 +130,7 @@
       </article>
 
        <article class="section_restaurants_carte carte carte_4">
-       <a href="pages_html/leDeliceDesSens.html">
+       <a href="pages_html/leDeliceDesSens.html" title="Le délice des sens" target="_blank">
               <div class="section_restaurants_carte_img cart_img img_1">
                 <img
              src="img/restaurants/Le-délice-des-sens.jpg"
