--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../desing/default.css"/>
-  <title>Ohmyfood_A la française</title>
+  <title>Ohmyfood_À la française</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
@@ -20,8 +20,8 @@
 
   <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html">  <i class="fas fa-arrow-left"></i> </a>
-            <img src="/img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
+            <a href="../index.html" title="Allez à l'accuil" target="_blank">  <i class="fas fa-arrow-left"></i> </a>
+              <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
         </nav>
   </header>
 
@@ -29,13 +29,13 @@
     <section class="restaurant"> 
             <div class="Restaurant_img ">
               <img
-                  src="../img/restaurants/a-la-française.jpg"
+                  src="../img/restaurants/A-la-française.jpg"
                     alt="La palette du goût"
                     class="paletteDuGout_img"/>  
             </div>
      <section class="restaurantEntresPlats">
              <div class="nomDuRestaurant_titre">
-                     <h2>A la française</h2>
+                     <h2>À la française</h2>
                      <div class="section_restaurants_carte_description_souhait icone_coeur">
                         <i class="far fa-heart fa-heart-1 heartGout"></i>
                         <i class="fas fa-heart heartHover"></i>
