--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -20,7 +20,7 @@
 
   <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html">  <i class="fas fa-arrow-left"></i> </a>
+            <a href="../index.html" title="Allez à l'accuil" target="_blank">  <i class="fas fa-arrow-left"></i> </a>
             <img src="/img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
         </nav>
   </header>
