--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 </head>
 <body>
   <header>
-    <div class="header">
-      <h1>
-        <img src="../img/logo/ohmyfood.png" alt="logo_Ohmyfood" class="logo"/> <br>
-        <img src="/img/logo/ohmyfood2.PNG" alt="logo_Ohmyfood" class="logo"/>
-      </h1>
-    </div>
+    <nav class="header">
+       <h1> <img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br> <img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/></h1>
+    </nav>
   </header>
   <!--main-->
   <main>
