--- a/pages_html/leDeliceDesSens.html
+++ b/pages_html/leDeliceDesSens.html
@@ -20,8 +20,8 @@
 
   <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html" title="Allez à l'accuil" target="_blank">  <i class="fas fa-arrow-left"></i> </a>
-            <img src="/img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
+            <a href="../index.html" title="Allez à l'accuil">  <i class="fas fa-arrow-left"></i> </a>
+              <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
         </nav>
   </header>
 
