Ajout Animation CSS

--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -27,141 +27,117 @@
 
  <main>  
     <section class="restaurant"> 
-            <div class="Restaurant_img ">
-              <img
-                  src="../img/restaurants/A-la-française.jpg"
-                    alt="La palette du goût"
-                    class="paletteDuGout_img"/>  
-            </div>
-     <section class="restaurantEntresPlats">
-             <div class="nomDuRestaurant_titre">
-                     <h2>À la française</h2>
-                     <div class="section_restaurants_carte_description_souhait icone_coeur">
-                        <i class="far fa-heart fa-heart-1 heartGout"></i>
-                        <i class="fas fa-heart heartHover"></i>
+              <div class="Restaurant_img ">
+                <img
+                    src="../img/restaurants/A-la-française.jpg"
+                      alt="La palette du goût"
+                      class="paletteDuGout_img"/>  
+              </div>
+            <section class="restaurantEntresPlats">
+                  <div class="nomDuRestaurant_titre">
+                      <h2>À la française</h2>
+                      <div class="section_restaurants_carte_description_souhait icone_coeur">
+                          <i class="far fa-heart fa-heart-1 heartGout"></i>
+                          <i class="fas fa-heart heartHover"></i>
                       </div>
-              </div>  
-       <section class="menu">
-        <article class="carteMenuEntree carteMenu">
-          <div class="carteHeader">
-            <h3>ENTRÉES <hr class="trait"></h3> 
-          </div>
-          <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Tartare de poulpe acidulé</h4>
-                  <div class="menuEntreeInfos menuDescriptionPrix">
-                    <p class="menuEntreeInfosCompliment">
-                   Aux zests d'orange
-                    </p>
-                    <p class="menuEntreeInfosPrix">25€</p>
-                  </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Velouté de légumes d'antan</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                Carotte, panais, topinambour
-                </p>
-                <p class="menuEntreeInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Soupe à l'oignon</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-              Revisitée
-                </p>
-                <p class="menuEntreeInfosPrix">20€</p>
-              </div>
-            </div>
-        </article>
-        <article class="carteMenuPlats carteMenu">
-          <div>
-            <h3>PLATS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Coquilles Saint-Jacques</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                   Accompagnées d'une purée de panais
-                </p>
-                <p class="MenuPlatsInfosPrix">40€</p>
-              </div>
-            </div>
-          </div>
-           <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Magret de canard</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                  Et parmentier de pommes de terres
-                </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-            <div class="MenuPlats menuX">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>pigeonneau d'Illes-et-Villaine</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-          Sur son lit de gnocchis aux légumes
-                </p>
-                <p class="MenuPlatsInfosPrix">44€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="carteMenuDesserts carteMenu">
-          <div>
-            <h3>DESSERTS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Pétales de violettes glacés</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-              Et purée de noisettes
-                </p>
-                <p class="MenuPlatsInfosPrix">18€</p>
-              </div>
-            </div>
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Fondant au chocolat</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                 Revisté
-                </p>
-                <p class="MenuPlatsInfosPrix">22€</p>
-              </div>
-            </div>
-          </div>
-    <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Millefeuille croustillant</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-      myrtilles et pate d'amende
-                </p>
-                <p class="MenuPlatsInfosPrix">23€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-   </section>
-         </section>
+                  </div>  
+                 <div class="menus">
+                    <article class="menu">
+                    <div class="carteHeader">
+                      <h3>ENTRÉES <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Tartate de poulpe acidulé</p>
+                          <p class="menuSousTitre">Aux zestes d'orange</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">25€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Velouté de légumes d'antan</p>
+                          <p class="menuSousTitre">Carotte, panais, topinambour</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Soupe à l'oignon</p>
+                            <p class="menuSousTitre">Revisitée</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">20€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>PLATS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Coquilles Saint-Jacques</p>
+                          <p class="menuSousTitre">Accompagnées d'un purée de panais</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">40€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Magret de canard</p>
+                          <p class="menuSousTitre">Et parmentier de pommes de terre</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Pigeonneau d'Ille-et-Vilaine</p>
+                            <p class="menuSousTitre">Sur son lit de gnocchis aux légumes</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">44€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>DESSERTS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Pétales de violettes glacés</p>
+                          <p class="menuSousTitre">Et purée de noisettes</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">18€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Fondant au chocolat</p>
+                          <p class="menuSousTitre">Revisité</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">22€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Millefeuille croustillant</p>
+                            <p class="menuSousTitre">Myrtilles et pâte d'amande</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">23€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                 </div>
+          </section>
+    </section>
+
        <section class="commander">
           <button class="btn_commander">Commander</button>
        </section>
      
  </main>
+
+
+ 
 <!--footer-->
 <footer>
     <div class="footer">
