--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav class="header">
-       <h1> <img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br> <img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/></h1>
+       <h1> <!--<img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br>--> <img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/></h1>
     </nav>
   </header>
   <!--main-->
